style(Stepper, Modal, SideModal): fixing z-index

--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -9,7 +9,7 @@
   @apply content-[''] bg-brown-300 absolute w-full h-[4px] right-2/4 top-1/4 -translate-y-2/4 lg:right-20; 
 }
 .step {
-  @apply w-7 h-7 flex items-center justify-center z-10 relative bg-brown-300 rounded-full text-xs text-gray-100 leading-none;
+  @apply w-7 h-7 flex items-center justify-center  relative bg-brown-300 rounded-full text-xs text-gray-100 leading-none;
 }
 .active .step {
   @apply bg-gray-850;
